# brandgpt_simple

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  brandgpt.db  demo_depth_parameter.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_tests.py  test_pdf_pipeline.py  test_system_prompts.py  test_url_pipeline.py  verify_depth_results.py
brandgpt/api/: auth.py  main.py  schemas.py
brandgpt/config/: settings.py
brandgpt/core/: __init__.py  embeddings.py  reranker.py  vector_store.py
brandgpt/ingestion/: __init__.py  enhanced_json_processor.py  json_processor.py  pdf_processor.py  pipeline.py  text_processor.py  url_processor.py
brandgpt/models/: __init__.py  database.py  document.py  prompt.py  session.py  user.py
brandgpt/retrieval/: __init__.py  llm_service.py  rag_graph.py
data/: brandgpt.db
docs/: URL_DEPTH_DOCUMENTATION.md
tests/: conftest.py  debug_vector_store.py  docker_readiness_check.py  migrate_vector_store.py  quick_persona_test.py  test_auth.py  test_config.py  test_depth_final.py  test_depth_oswald.py  test_depth_simple.py  test_docker_deployment.py  test_docker_qdrant.py  test_existing_content_personas.py  test_ingestion.py  test_json_pipeline.py  test_performance.py  test_prompt_storage.py  test_query.py  test_sessions.py  test_url_pipeline.py  utils.py
tests/integration/: test_full_pipeline.py
