[project]
name = "brandgpt-simple"
version = "0.1.0"
description = "RAG application using LangGraph with PDF, text, and URL ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-unstructured>=0.1.0",
    "unstructured[pdf]>=0.15.0",
    "scrapy>=2.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "httpretty>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brandgpt"]
